--- a/styles.css
+++ b/styles.css
@@ -195,3 +195,71 @@ body{
     height: 50px;
     width: 228px;
 }
+
+
+/*turbo button field*/
+.turbo-button{
+    display: inline-block;
+    height: 26px;
+    width: 41px;
+    outline: none;
+    border: none;
+    background: url("images/turbo_button_field_on.png")  bottom no-repeat;
+    background-size: 42px;
+    margin-bottom: 13px;
+    margin-left: -4px;
+}
+.turbo-button-click {
+    background: url("images/turbo_button_off.png")  bottom no-repeat;
+    background-size: 42px;
+    display: inline-block;
+    height: 26px;
+    width: 41px;
+    outline: none;
+    border: none;
+    margin-bottom: 13px;
+    margin-left: -4px;
+}
+.turbo-button-switch, .turbo-button-switch:hover, .turbo-button-switch-down{
+    display: inline-block;
+    vertical-align: top;
+    margin-top: -4px;
+    margin-left: -6px;
+    height: 14px;
+    width: 40px;
+    outline: none;
+}
+.turbo-button-switch {
+    background: url("images/turbo_button_on.png") 0 -62px no-repeat;
+    background-size: 42px;
+}
+.turbo-button-switch:hover{
+    background: url("images/turbo_button_on.png") 0 -85px no-repeat;
+    background-size: 42px;
+}
+.turbo-button-switch-down{
+    background: url("images/turbo_button_on.png") 0 -107px no-repeat;
+    background-size: 42px;
+}
+.turbo-button-switch-click, .turbo-button-switch-click:hover {
+    display: inline-block;
+    vertical-align: bottom;
+    height: 14px;
+    width: 40px;
+    outline: none;
+    margin-left: -6px;
+    margin-bottom: -3px;
+}
+.turbo-button-switch-click{
+    background: url("images/turbo_button_on.png") 0 -62px no-repeat;
+    background-size: 42px;
+}
+.turbo-button-switch-click:hover{
+    background: url("images/turbo_button_on.png") 0 -85px no-repeat;
+    background-size: 42px;
+}
+.turbo-sign{
+    background: url("images/TURBO_sign.png")  center no-repeat;
+    background-size: 30px;
+    height: 14px;
+}
